--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,4 @@
 
-
 default: &default
   adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
@@ -7,15 +6,16 @@ default: &default
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: mysite_development
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: mysite_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: mysite_production
+  username: mysite
+  password: <%= ENV['MYSITE_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
+
