--- a/config/database.yml
+++ b/config/database.yml
@@ -6,16 +6,15 @@ default: &default
 
 development:
   <<: *default
-  database: mysite_development
+  database: dryCleaner_development
+  
 
 test:
   <<: *default
-  database: mysite_test
-
+  database: dryCleaner_test
+  
 production:
   <<: *default
-  database: mysite_production
-  username: mysite
-  password: <%= ENV['MYSITE_DATABASE_PASSWORD'] %>
+  database: dryCleaner_production  
   url: <%= ENV['DATABASE_URL'] %>
 
