--- a/config/database.yml
+++ b/config/database.yml
@@ -6,15 +6,21 @@ default: &default
 
 development:
   <<: *default
-  database: dryCleaner_development
+  database: mysite_development
+  username: postgres
+  password: postgres
   
 
 test:
   <<: *default
-  database: dryCleaner_test
+  database: mysite_test
+    username: postgres
+  password: postgres
   
 production:
   <<: *default
-  database: dryCleaner_production  
+  database: mysite_production  
   url: <%= ENV['DATABASE_URL'] %>
+  username: postgres
+  password: postgres
 
