--- a/config/database.yml
+++ b/config/database.yml
@@ -1,27 +1,23 @@
 
 default: &default
-  adapter: postgresql
+  adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
-  database: mysite_development
-  username: postgres
-  password: postgres
+  database: db/development.sqlite3
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
   
 
 test:
   <<: *default
-  database: mysite_test
-  username: postgres
-  password: postgres
+  database: db/test.sqlite3
   
 production:
-  <<: *default
-  database: mysite_production  
+  adapter: postgresql
   url: <%= ENV['DATABASE_URL'] %>
-  username: postgres
-  password: postgres
   
 
